# konfessio

./: .gitignore  CMakeLists.txt  README.md  net.reformedwitness.konfessio.desktop
metainfo/: net.reformedwitness.konfessio.metainfo.xml
src/: CMakeLists.txt  Main.qml  appsettings.cpp  appsettings.h  confessionmodel.cpp  confessionmodel.h  data.qrc  main.cpp
src/data/: london_baptist_1689.json
src/qml/components/: ChapterPage.qml  InfoPage.qml  SettingsPage.qml  StatCard.qml
